2003-08-01  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (setStyle):  Default htmlCompat to false.

2003-07-23  Per Bothner  <per@bothner.com>

	* NodeTree.java (stableCompare): New method.
	(getId):  New method.
	(id, counter):  New fields used by getId.

2003-07-10  Per Bothner  <per@bothner.com>

	* NodeTree.java:  New class, extends TreeList.
	* Makefile.am (java_sources):  Add NodeTree.java.

	* XMLPrinter.java (writeObject):  Don't call closeTag if parameter
	is SeqPosition or Consumable and not UnescapedData.

2003-06-27  Per Bothner  <per@bothner.com>

	* NamespaceResolver.java:  Removed - functionality merged with
	ParsedXMLToConsumer.java.
	* Makefile.am (java_sources):  Update accordingly.
	* ParsedXMLToConsumer.java:  Merge in NamespaceResolver functionality,
	but hopefully more efficient.  This is a major re-write.
	(class MappingInfo):  New helper class.

2003-05-30  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (toString):  New utility function.

2003-05-02  Per Bothner  <per@bothner.com>

	* NamespaceResolver.java (parser, mismatchReported):  New field.
	(setParser):  New method.
	(endGroup):  Call parser's error if mismatch.
	* ParsedXMLToConsumer.java (emitEndElement):  Add sanity check.

	* XMLParser.java.in (parse):  Set this.pos before calling
	emitBeginElement and emitEndElement, for better error reporting.

2003-04-12  Per Bothner  <per@bothner.com>

	* XMLParser.java.in (parse):  Handle Names according to XML 1.1
	candidate, allowing many other characters.

2003-01-28  Per Bothner  <per@bothner.com>

	* VariableProvider.java:  Removed - superceded more-or-less by XQuery.

2003-01-24  Per Bothner  <per@bothner.com>

	* NamespaceResolver.java (beginAttribute):  Fix off-by-one error
	reported 1/22 by Robert Yokota <ryokota@modeln.com>.

2003-01-09  Per Bothner  <per@bothner.com>

	* NamedChildrenFilter.java:  Update for gnu.lists changes.
	* NamespaceResolver.java:  Likewise.
	* XMLPrinter.java:  Likewise.
	