@@ -1,3 +1,7 @@
+2003-08-03  Per Bothner  <per@bothner.com>
+
+	* NodeTree.java (nextPos):  New method.  Allows client simplification.
+
 2003-08-01  Per Bothner  <per@bothner.com>
 
 	* XMLPrinter.java (setStyle):  Default htmlCompat to false.
